test/libsolidity/syntaxTests/nameAndTypeResolution/modifier_is_not_a_valid_typename_is_not_fatal.sol
contract test {
    modifier mod() { _; }

    function f() public {
        mod g;
        g = f;
    }
}
// ----
// TypeError: (77-80): Name has to refer to a struct, enum or contract.
